--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -20,7 +20,3 @@
     padding-top: ($spacer * 6);
   }
 }
-
-.main {
-  padding-top: 8rem;
-}
